--- a/src/main/webapp/WEB-INF/liferay-plugin-package.properties
+++ b/src/main/webapp/WEB-INF/liferay-plugin-package.properties
@@ -7,4 +7,8 @@ change-log=
 page-url=http://www.liferay.com
 author=Liferay, Inc.
 licenses=LGPL
-portal-dependency-jars=
+portal-dependency-jars=\
+    vaadin-server.jar,\
+    vaadin-shared.jar,\
+    vaadin-shared-deps.jar,\
+    jsoup.jar
